# spherical-harmonics

./: .gitignore  README.md  generator.ipynb  generator.py  pyproject.toml
